--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.ar.core.codelab.rawdepth.ru.google.ar.core.codelab.rawdepth.RawDepthCodelabActivity">
+    tools:context="ru.ssau.arwalls.rawdepth.MainActivity">
 
   <androidx.fragment.app.FragmentContainerView
       android:id="@+id/fragment_container"
