centralize map feature

--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -10,6 +10,15 @@
         android:layout_height="match_parent"
         />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/location_map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_gravity="top|end"
+        android:contentDescription="@string/centralize"
+        android:src="@drawable/location"
+        />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/redraw_map"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
