--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,4 +41,15 @@
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
+      android:id="@+id/settings"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:background="@color/dark_transparent"
+      android:src="@drawable/ic_settings"
+      android:layout_margin="16dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+    />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
