--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="dark_transparent">#7f000000</color>
     <color name="light_transparent">#7fffffff</color>
+    <color name="green">#00c853</color>
 </resources>
