--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,33 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="@color/dark_transparent"
     >
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/save"
+        >
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
 
-    <include
-        android:id="@+id/marker_visibility"
-        layout="@layout/item_checkbox"
-        />
-    <include
-        android:id="@+id/accuracy"
-        layout="@layout/item_slider"
-        />
-    <include
-        android:id="@+id/vertical_radius"
-        layout="@layout/item_slider"
-        />
-    <include
-        android:id="@+id/height_offset"
-        layout="@layout/item_slider"
-        />
-    <include
-        android:id="@+id/max_render_points"
-        layout="@layout/item_slider"
-        />
+            <include
+                android:id="@+id/marker_visibility"
+                layout="@layout/item_checkbox"
+                />
+            <include
+                android:id="@+id/accuracy"
+                layout="@layout/item_slider"
+                />
+            <include
+                android:id="@+id/vertical_radius"
+                layout="@layout/item_slider"
+                />
+            <include
+                android:id="@+id/height_offset"
+                layout="@layout/item_slider"
+                />
+            <include
+                android:id="@+id/max_render_points"
+                layout="@layout/item_slider"
+                />
+        </LinearLayout>
+    </ScrollView>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/save"
@@ -35,6 +49,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
         android:text="@string/save"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
