moved params button to top of surface view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ru.ssau.arwalls.rawdepth.MainActivity">
+    tools:context="ru.ssau.arwalls.rawdepth.MainActivity"
+    >
 
   <androidx.fragment.app.FragmentContainerView
       android:id="@+id/fragment_container"
@@ -29,7 +30,8 @@
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      tools:layout="@layout/fragment_map" />
+      tools:layout="@layout/fragment_map"
+      />
 
   <android.opengl.GLSurfaceView
       android:id="@+id/surface_view"
@@ -48,8 +50,9 @@
       android:background="@color/dark_transparent"
       android:src="@drawable/ic_settings"
       android:layout_margin="16dp"
-      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintTop_toTopOf="@id/surface_view"
       app:layout_constraintEnd_toEndOf="parent"
-    />
+      android:contentDescription="@string/settings"
+      />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
